# tetris

./: .gitignore  CMakeLists.txt  README.md
config/: config
src/: main.cpp
src/common/: CMakeLists.txt  common.h  config.cpp  config.h  global.cpp  global.h  my_utils.cpp  my_utils.h
src/logger/: CMakeLists.txt  logger.cpp  logger.h
src/manage/: CMakeLists.txt  main_menu_manage.cpp  main_menu_manage.h  play_game_manage.cpp  play_game_manage.h  settlement_manage.cpp  settlement_manage.h  top_manage.cpp  top_manage.h
src/render/: CMakeLists.txt  sdl_button.cpp  sdl_button.h  sdl_texture.cpp  sdl_texture.h  sdl_timer.cpp  sdl_timer.h  sdl_ttf.cpp  sdl_ttf.h  sdl_window.cpp  sdl_window.h
src/tile/: CMakeLists.txt  shape_base.cpp  shape_base.h  shape_i.cpp  shape_i.h  shape_j.cpp  shape_j.h  shape_l.cpp  shape_l.h  shape_o.cpp  shape_o.h  shape_s.cpp  shape_s.h  shape_t.cpp  shape_t.h  shape_z.cpp  shape_z.h  tile.cpp  tile.h  tile_board.cpp  tile_board.h  tile_data_board.cpp  tile_data_board.h
